--- a/_posts/2022-01-18-10000-doggies.md
+++ b/_posts/2022-01-18-10000-doggies.md
@@ -1,6 +1,9 @@
 ---
 title: "Alpha, Alpha, Alpha Alert - 10 000 Dooggies, The World's First 10 000 Doge Edition (Anno 2021) - Free All-In-One Image Composite Download (3200x3200px) - dooggies.png (~1.7MB)"
+
+image: dooggies-preview.png
 ---
+
 
  I put together an all-in-one composite for Dooggies (32x32), The World's First 10000 Doge Edition.
 
